new appoint in main page

--- a/#source/scss/button.scss
+++ b/#source/scss/button.scss
@@ -81,7 +81,7 @@
 }
 
 .wave-btn__waves:before{
-	background-color: rgb(255, 255, 255);
+	background-color: rgba(255, 255, 255, 0);
 	border-radius: 48%;
 
 	animation: waves 5s infinite linear;
