--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -4,62 +4,28 @@
 @import "button.scss";
 $green:#2CA900;
 
-@media (max-width:1200px){
-   .header-wrapper__wrapper-text{ display: none; } 
-   header{ padding-right: 30px;}
-}
-@media (max-width:992px){}
-@media (max-width:767px){
-    header{ padding-right: 15px;}
-    .header-wrapper{
-        &__navigation{ display: none; }
-        .burger{ 
-            display: block; 
-            width: 70px; 
-            height: 70px;
-            img{
-                width: 100%;
-                 height: auto;
-            }
-        }
-    }
-}
 body{
     font-family: 'Roboto';
 }
 
-.wrapper{
-    .container-img{
-        width: 100%;
-        height: 40rem;
+.container-img{
+        height: 35rem;
         border-bottom: 1px solid #BDBDBD;
         background-image: url(../img/main/blur-wave.png) ;
         background-repeat: no-repeat;
         background-size: cover;
         display: flex;
-    }
-}
-
-.container-img{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0 17vw;
     &__appoint{
-        opacity: .9;
-        width: 36.75em;
-        height: 27.5em;
-        background-color: white;
-        border: 2px solid #BABABA;
-        border-radius: 10px;
-    }
-    &__border{
-        margin: 5PX;
-        
-        height: 96%;
+        width: 50%;
+        height: 100%;
+        background-color: rgba($color: #ffffff, $alpha: 0.6);
         display: flex;
         justify-content: center;
         align-items: center;
+    }
+    &__border{
+        width: 36.75em;
+        height: 27.5em;
     }
     &__content{
         display: inline-flex;
@@ -80,17 +46,10 @@ body{
             line-height: 25px;
         }
     }
-    &__photo{
-        width: 600px;
-        height: 550px;
-        background-image: url(..//img/main/photo.png);
-        background-repeat: no-repeat;
-        background-size: cover;
-    }
 }
 
 .main-info{
-    padding: 0 17vw;
+    padding: 0 15vw;
     margin-top: 50px;
     color: #777777;
     &__switch{
@@ -142,3 +101,31 @@ body{
         }
     }
 }
+
+@media (max-width:1200px){
+    .header-wrapper__wrapper-text{ display: none; } 
+    header{ padding-right: 30px;}
+ }
+ @media (max-width:992px){}
+ @media (max-width:767px){
+     header{ padding: 0 15px; }
+     .header-wrapper{
+         &__navigation{ display: none; }
+         .burger{ 
+             display: block; 
+             width: 70px; 
+             height: 70px;
+             img{
+                 width: 100%;
+                 height: auto;
+             }
+         }
+     }
+     .container-img{
+         display: block;
+         &__photo{ display: none; }
+         &__appoint{ width: 100%; }
+         &__content{ align-items: center; .text{align-self: flex-start;}}
+     }
+     .main-info{ padding: 0 5vw; }
+ }
