--- a/css/style.css
+++ b/css/style.css
@@ -265,7 +265,7 @@ header {
 }
 
 .wave-btn__waves:before {
-  background-color: rgb(255, 255, 255);
+  background-color: rgba(255, 255, 255, 0);
   border-radius: 48%;
   animation: waves 5s infinite linear;
   -webkit-animation: waves 5s infinite linear;
@@ -314,40 +314,12 @@ header {
     -o-transform: translate3d(-50%, -96%, 0) rotate(360deg) scale(1);
   }
 }
-@media (max-width: 1200px) {
-  .header-wrapper__wrapper-text {
-    display: none;
-  }
-
-  header {
-    padding-right: 30px;
-  }
-}
-@media (max-width: 767px) {
-  header {
-    padding-right: 15px;
-  }
-
-  .header-wrapper__navigation {
-    display: none;
-  }
-  .header-wrapper .burger {
-    display: block;
-    width: 70px;
-    height: 70px;
-  }
-  .header-wrapper .burger img {
-    width: 100%;
-    height: auto;
-  }
-}
 body {
   font-family: "Roboto";
 }
 
-.wrapper .container-img {
-  width: 100%;
-  height: 40rem;
+.container-img {
+  height: 35rem;
   border-bottom: 1px solid #BDBDBD;
   background-image: url(../img/main/blur-wave.png);
   background-repeat: no-repeat;
@@ -356,30 +328,10 @@ body {
   display: -ms-flexbox;
   display: flex;
 }
-
-.container-img {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  padding: 0 17vw;
-}
 .container-img__appoint {
-  opacity: 0.9;
-  width: 36.75em;
-  height: 27.5em;
-  background-color: white;
-  border: 2px solid #BABABA;
-  border-radius: 10px;
-}
-.container-img__border {
-  margin: 5PX;
-  height: 96%;
+  width: 50%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.6);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -389,6 +341,10 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+.container-img__border {
+  width: 36.75em;
+  height: 27.5em;
 }
 .container-img__content {
   display: -webkit-inline-box;
@@ -419,16 +375,9 @@ body {
   font-size: 1.2em;
   line-height: 25px;
 }
-.container-img__photo {
-  width: 600px;
-  height: 550px;
-  background-image: url(..//img/main/photo.png);
-  background-repeat: no-repeat;
-  background-size: cover;
-}
 
 .main-info {
-  padding: 0 17vw;
+  padding: 0 15vw;
   margin-top: 50px;
   color: #777777;
 }
@@ -479,4 +428,55 @@ body {
   border-radius: 50%;
   left: 6px;
   top: 5px;
+}
+
+@media (max-width: 1200px) {
+  .header-wrapper__wrapper-text {
+    display: none;
+  }
+
+  header {
+    padding-right: 30px;
+  }
+}
+@media (max-width: 767px) {
+  header {
+    padding: 0 15px;
+  }
+
+  .header-wrapper__navigation {
+    display: none;
+  }
+  .header-wrapper .burger {
+    display: block;
+    width: 70px;
+    height: 70px;
+  }
+  .header-wrapper .burger img {
+    width: 100%;
+    height: auto;
+  }
+
+  .container-img {
+    display: block;
+  }
+  .container-img__photo {
+    display: none;
+  }
+  .container-img__appoint {
+    width: 100%;
+  }
+  .container-img__content {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .container-img__content .text {
+    -ms-flex-item-align: start;
+        align-self: flex-start;
+  }
+
+  .main-info {
+    padding: 0 5vw;
+  }
 }
