--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -280,6 +280,70 @@ body::-webkit-scrollbar-track {
     }
 }
 
+.container-ser{
+    padding-top: 6em;
+    margin: 0 35vw;
+    .heading{
+        margin: 40px 0;
+        text-align: center;
+        text-transform: uppercase;
+        font-family: 'Roboto';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 30px;
+        line-height: 42px;
+        color: #383838;
+        text-shadow: 0px 0px 31px rgba(0, 0, 0, 0.25);
+    }
+}
+.card{
+    width: 100%;
+    box-shadow: 0px 3px 30px 2px rgba(0, 0, 0, 0.25);
+    border-radius: 20px;
+    &__image{
+        border-radius: 20px 20px 0 0;
+        height: 350px;
+        img{
+            border-radius: 20px 20px 0 0;
+            max-width: 100%;
+            height: 350px;
+            object-fit: cover;
+        }
+    }
+    &__content{
+        padding: 0 35px 25px 35px;
+    }
+    &__heading{
+        font-size: 26px;
+        line-height: 38px;
+        color: #000000;
+        margin-bottom: 25px;
+        text-align: center;
+    }
+    &__text{
+        line-height: 157.69%;
+    }
+    &__button{
+        display: flex;
+        justify-content: center;
+        align-content: center;
+        margin: 25px auto 0 auto;
+        width: 60%;
+        height: 50px;
+        background-color: #ffffff;
+        border-radius: 10px;
+        border: 1px solid black;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    }
+    &__text-btn{
+        display: flex;
+        align-items: center;
+        font-weight: 700;
+        font-size: 14px;
+        letter-spacing: 0.145em;
+    }
+}
+
 @media (max-width:1200px){
     .header-wrapper__wrapper-text{ display: none; } 
     header{ padding-right: 30px;}
@@ -288,8 +352,15 @@ body::-webkit-scrollbar-track {
             grid-template-columns: repeat(2, 1fr);
         }
     }
+    .container-ser{
+        margin: 0 25vw;
+    }
  }
- @media (max-width:992px){}
+ @media (max-width:992px){
+    .container-ser{
+        margin: 0 15vw;
+    }
+ }
  @media (max-width:770px){
     .content{ padding: 0 5vw; }
      header{ height: 5em; padding: 0 15px; }
@@ -318,6 +389,8 @@ body::-webkit-scrollbar-track {
         &__flex-wrapper{ display: block; }
         .mrgn30{ margin: 20px; }
     }
+    .slick-prev,
+    .slick-next{opacity: 0;}
  }
  @media (max-width:580px){
     .service{
@@ -328,5 +401,7 @@ body::-webkit-scrollbar-track {
             margin-top: 50px;
         }
     }
+    .container-ser{
+        margin: 0 5vw;
+    }
  }
-
