--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -218,14 +218,33 @@ body::-webkit-scrollbar-track {
     max-width: 550px;
     margin: 0 auto;
     color: black;
-    padding: 90px 0;
+    padding: 90px 10px;
+    &__body{
+        position: relative;   
+    }
+    &__body::after{
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border-radius: 20px;
+        background: rgba($color: #c5c5c5, $alpha: .5) url(../img/main/loadgif.gif) center / 50px no-repeat;
+        opacity: 0;
+        visibility: hidden; 
+        transition: all 0.5s ease 0s;
+    }
+    &__body._sending::after{
+        opacity: 1;
+        visibility: visible;
+    }
     &__title{
         color: white;
         text-align: center;
         font-size: 40px;
         font-weight: 700;
         margin: 0 0 30px 0;
-
     }
     &__item{
         margin: 0 0 20px 0;
@@ -244,6 +263,9 @@ body::-webkit-scrollbar-track {
         font-size: 18px;
         border: 1px solid white;
         transition: all 0.5s ease 0s;
+    }
+    &__input._error{
+        box-shadow: 0 0 15px red;
     }
     &__input:focus{
         box-shadow: 0 0 15px rgb(8, 215, 46);
