--- a/css/style.css
+++ b/css/style.css
@@ -639,7 +639,28 @@ body::-webkit-scrollbar-track {
   max-width: 550px;
   margin: 0 auto;
   color: black;
-  padding: 90px 0;
+  padding: 90px 10px;
+}
+.form__body {
+  position: relative;
+}
+.form__body::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 20px;
+  background: rgba(197, 197, 197, 0.5) url(../img/main/loadgif.gif) center/50px no-repeat;
+  opacity: 0;
+  visibility: hidden;
+  -webkit-transition: all 0.5s ease 0s;
+  transition: all 0.5s ease 0s;
+}
+.form__body._sending::after {
+  opacity: 1;
+  visibility: visible;
 }
 .form__title {
   color: white;
@@ -666,6 +687,10 @@ body::-webkit-scrollbar-track {
   border: 1px solid white;
   -webkit-transition: all 0.5s ease 0s;
   transition: all 0.5s ease 0s;
+}
+.form__input._error {
+  -webkit-box-shadow: 0 0 15px red;
+          box-shadow: 0 0 15px red;
 }
 .form__input:focus {
   -webkit-box-shadow: 0 0 15px rgb(8, 215, 46);
