--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -5,6 +5,10 @@
 @import "footer.scss";
 $green:#2CA900;
 
+html{
+    scroll-behavior: smooth;
+}
+
 body{
     font-family: 'Roboto';
 }
@@ -35,6 +39,9 @@ body::-webkit-scrollbar-track {
         background-size: cover;
         background-attachment: fixed;
         display: flex;
+    a{
+        
+    }
     &__appoint{
         width: 50%;
         height: 100%;
@@ -237,6 +244,7 @@ body::-webkit-scrollbar-track {
     padding: 90px 10px;
     &__body{
         position: relative;   
+        scroll-behavior: smooth;
     }
     &__body::after{
         content: "";
@@ -380,6 +388,84 @@ body::-webkit-scrollbar-track {
         font-weight: 700;
         font-size: 14px;
         letter-spacing: 0.145em;
+    }
+}
+
+.popup{
+    z-index: 9999;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    top: 0;
+    left: 0;
+    opacity: 0;
+    visibility: hidden;
+    overflow-y: auto;
+    overflow-x: hidden;
+    transition: all 0.8s ease 0s;
+    
+    &__area{
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+    }
+
+    &__body{
+        min-height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 30px 10px;  
+    }
+
+    &__content{
+        background-color: rgb(223, 223, 223);
+        max-width: 600px;
+        height: 100%;
+        padding: 15px 30px 10px 15px;
+        border-radius: 10px;
+        position: relative;
+        transform: translate(0px, -100%);
+        opacity: 0;
+        transition: all 0.8s ease 0s;
+    }
+
+    &__close{
+        position: absolute;
+        top: 2px;
+        right: 10px;
+        font-size: 3em;
+        transform: rotate(45deg);
+    }
+
+    &__wrapper-contacts{
+        font-size: 1.4em;
+        padding: 27px 0 27px 15px;
+        max-width: 300px;
+        border-bottom: 2px solid black;
+    
+        >div{
+            margin-bottom: 7px;
+            .bold{font-family: 'proxima-bold' , serif;}
+        }
+    }
+    
+    &__adres-contacts{
+        font-size: 1.4em;
+        line-height: 1.5em;
+        padding: 27px 15px 27px 15px; 
+    }
+
+    &:target{
+        opacity: 1;
+        visibility: visible;
+        .popup__content{  
+            transform: translate(0px,0px);
+            opacity: 1;
+        }
     }
 }
 
